# gemm-optimize

./: CMakeLists.txt  README.md  output_new.m
src/: MMult0.c  MMult1.c  PlotAll.py  REF_MMult.c  random_matrix.c  test_MMult.c
src/optimize/: MMult_1x4_3.c  MMult_1x4_4.c  MMult_1x4_5.c  MMult_4x4_10.c  MMult_4x4_14.c  MMult_4x4_15.c
